--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 src/server/DatabaseModel/DatabaseCredentials.java
-src/server/DatabaseModel/DatabaseCredentials.java
+out/*
